# rust_blue_pill_template

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Cargo.toml.liquid  README.md  build.rhai  cargo-generate.toml
app/: Cargo.toml
app/src/: main.rs
lib/{{sublibrary}}/: Cargo.toml.liquid
src/: main.rs
{{project-name}}/: Cargo.toml
